# aikadm

./: .gitignore  README.md  aikadm.go  app.go  assets.go  build.sh  cli.go  flake.nix  garnix.yaml  go.mod  go.sum  index.html  main.go  meson.build  mook-app.go  package.nix  wails.json
.github/workflows/: auto_release.yaml  publish_new_version.yaml  publish_npm.yaml
backend/: cage.go  common.go  hyprland.go
data/: aikadm.gresource.xml  meson.build
data/scss/: main.scss
data/ui/: Window.blp  blur-canvas.blp  date-time.blp  input-page.blp  meson.build  wallpaper.blp  window.blp
example/: flake.nix
frontend/: index.html  package-lock.json
greetd/: greetd.go
nix/: aikadm-hyprland-script.nix  devshell.nix  overlays.nix  package.nix  pkgs.nix
nix/lib/: cage-script.nix  default.nix  hyprland-script.nix  parse-argv.nix
npm-package/: .npmignore  README.md  demo.ts  index.js  index.ts  package.json
src/: Aikadm.vala  C.vala  Option.vala  Utils.vala  Window.vala  aikadm.gresource.xml  aikadm.vala  blur-canvas.vala  common.vala  date-time.vala  ensure-types.vala  input-page.vala  meson.build  option.vala  test.vala  wallpaper.vala  window.vala
src/scss/: meson.build
src/ui/: Window.blp
